# backend/src/routes/index.ts
@@ -1,12 +1,9 @@
 import { Router } from "express";
 import {
   createTodo,
-  getAllTodos,
-  deleteTodoById,
-  getTodoById, 
-  updateTodoById,
-  createRandomTodo
+  getAllTodos
 } from "./methods";
+import { updateTodoById, deleteTodoById, getTodoById } from "./newMethods";
 
 const todoRouter = Router();
 todoRouter.post("/todos", createTodo);
@@ -14,10 +11,5 @@ todoRouter.get("/todos", getAllTodos);
 todoRouter.get("/todos/:id", getTodoById);
 todoRouter.put("/todos/:id", updateTodoById);
 todoRouter.delete("/todos/:id", deleteTodoById);
-todoRouter.post("/todos/random", createRandomTodo);
-
-todoRouter.get("/demo/time", (req, res) => {
-  res.status(200).send({ time: new Date().toTimeString() })
-});
 
 export default todoRouter;
